--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block title %}{{title}}{% endblock %}
 {% block stylesheet_content %}
+<!--[if IE]>
+	<link href="{{url_for('static', filename='css/ie.css')}}" media="screen, projection" rel="stylesheet" type="text/css" />
+<![endif]-->
+<link href="{{url_for('static', filename='css/main.css')}}" media="screen, projection" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block script_content %}{% endblock %}
