schfolding index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,21 @@
 {% block script_content %}{% endblock %}
 
 {% block body_content %}
-	<p> Hello World~</p>
+<header class="header_wrapper">
+	<div class="menu">
+		<ul>
+			<li class="item">DashBoard</li>
+			<li class="item">TestClient</li>
+			<li class="item">Settings</li>
+		</ul>
+	</div>
+</header>
+<section class="section_wrapper">
+	<div class="item_list">This is item list (video's list in casparCG server media path)</div>
+	<div class="onboard_list">This is the list of wait to be playouted</div>
+</section>
+<footer class="footer_wrapper">
+	<div class="footer"></div>
+</footer>
 {% endblock %}
+
