draft the index.html

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -38,3 +38,11 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+.section_wrapper {
+	min-height:480px;
+}
+
+footer {
+	text-align:center;
+}
