--- a/templates/index.html
+++ b/templates/index.html
@@ -43,10 +43,52 @@
 			</dl>
 			<div class="tabs-content">
 				<div class="content active" id="panel1">
-					<p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p>
+					<table>
+						<thead>
+							<tr>
+								<th width="100">name</th>
+								<th>file path</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+						</tbody>
+					</table>
 				 </div>
 				 <div class="content" id="panel2">
-					<p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+					<table>
+						<thead>
+							<tr>
+								<th width="100">name</th>
+								<th>file path</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+							<tr>
+								<td>Content Goes Here</td>
+								<td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+							</tr>
+						</tbody>
+					</table>
 				 </div>
 			</div>
 		</div>
