fix a little mistake

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
 	</div>
 </section>
 <footer>
-	<p>Designed by Cwyark (<a href="https://github.com/cwyark">Github</a>||<a href="https://twitter.com/cwyark">Twitter</a>||<a href="http://cwyark.tumblr.com/">Timblr</a>) || All rights reserved</p>
+	<p>Designed by Cwyark (<a href="https://github.com/cwyark">Github</a>||<a href="https://twitter.com/cwyark">Twitter</a>||<a href="http://cwyark.tumblr.com/">Tumblr</a>) || All rights reserved</p>
 </footer>
 {% endblock %}
 
