--- a/static/scss/_settings.scss
+++ b/static/scss/_settings.scss
@@ -79,9 +79,9 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: rem-calc(1366);
+// $row-width: rem-calc(1000);
 // $total-columns: 12;
-$column-gutter: rem-calc(30);
+// $column-gutter: rem-calc(30);
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -1365,12 +1365,12 @@ $column-gutter: rem-calc(30);
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 45px;
-$topbar-margin-bottom: 0;
+// $topbar-height: 45px;
+// $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
 // $topbar-title-weight: $font-weight-normal;
-$topbar-title-font-size: rem-calc(25);
+// $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
 // $topbar-dropdown-bg: $oil;
@@ -1387,7 +1387,7 @@ $topbar-title-font-size: rem-calc(25);
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
-$topbar-link-font-size: rem-calc(18);
+// $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-color-hover: $charcoal;
@@ -1419,7 +1419,7 @@ $topbar-link-font-size: rem-calc(18);
 // $topbar-menu-icon-color-toggled: $jumbo;
 
 // Transitions and breakpoint styles
- $topbar-transition-speed: 200ms;
+// $topbar-transition-speed: 300ms;
 // Using rem-calc for the below breakpoint causes issues with top bar
 // $topbar-breakpoint: #{lower-bound($medium-range)}; // Change to 9999px for always mobile layout
 // $topbar-media-query: $medium-up;
