--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}{% endblock %}</title>
+	<link href="{{url_for('static', filename='css/app.css')}}" media="screen, projection" rel="stylesheet" type="text/css" />
 	{% block stylesheet_content %}{% endblock %}
 	{% block script_content %}{% endblock %}
 </head>
 <body>
+	<nav class="top-bar" data-topbar role="navigation">
+		<ul class="title-area">
+			<li class="name">
+				<h1><a href="/">CasparCG Web Client</a></h1>
+			</li>
+			<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+			<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+		</ul>
+
+		<section class="top-bar-section">
+			<!-- Right Nav Section -->
+			<ul class="right">
+				<li class="has-dropdown">
+					<a href="#">Settings</a>
+					 <ul class="dropdown">
+						<li><a href="#">First link in dropdown</a></li>
+						<li><a href="#">Active link in dropdown</a></li>
+					 </ul>
+				</li>
+			</ul>
+			<!-- Left Nav Section -->
+			<ul class="left">
+				<li class="active"><a href="/">Dashboard</a></li>
+				<li ><a href="/testclient">Test client</a></li>
+			</ul>
+		</section>
+	</nav>
 	{% block body_content %}{% endblock %}
+	<footer>
+		<p>Designed by Cwyark (<a href="https://github.com/cwyark">Github</a>||<a href="https://twitter.com/cwyark">Twitter</a>||<a href="http://cwyark.tumblr.com/">Tumblr</a>) || All rights reserved</p>
+	</footer>
 </body>
-{% block end_script_content %}{% endblock %}
+{% block end_script_content %}
+<script src="{{url_for('static', filename='bower_components/jquery/dist/jquery.min.js')}}"></script>
+<script src="{{url_for('static', filename='bower_components/foundation/js/foundation.min.js')}}"></script>
+<script src="{{url_for('static', filename='bower_components/foundation/js/foundation/foundation.offcanvas.js')}}"></script>
+<script>
+    $(document).foundation();
+</script>
+{% endblock %}
 </html>
